<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Catedra2</string>
    <string name="action_settings">Settings</string>
     <string name="name">Name</string>
    <string name="editText1"></string>
    <string name="surname">Surname</string>
    <string name="editText2"></string>
     <string name="Fecha_de_nacimiento">Fecha de nacimiento</string>
    <string name="editText3"></string>
     <string name="user">User</string>
    <string name="editText4"></string>
    <string name="email">Email</string>
    <string name="editText5"></string>
    <string name="password">Password</string>
    <string name="editText6"></string>
    <string name="Button1">Registro</string>
    <string name="title_activity_primera">PrimeraActivity</string>
    <string name="User1">User</string>
    <string name="email1"></string>
     <string name="password1">Password</string>
    <string name="editText8"></string>
    <string name="Button">Login</string>
    <string name="title_activity_segunda">SegundaActivity</string>
      <string name="name2">Name</string>
    <string name="editText9"></string>
    <string name="surname2">Surname</string>
    <string name="editText10"></string>
     <string name="Fecha_de_nacimiento2">Fecha de nacimiento</string>
    <string name="editText11"></string>
     <string name="user2">User</string>
    <string name="editText12"></string>
    <string name="email2">Email</string>
    <string name="editText13"></string>
    <string name="password2">Password</string>
    <string name="editText14"></string>
    <string name="title_activity_tercera">TerceraActivity</string>
     <string name="Profile">Profile</string>
     <string name="Setting">Setting</string>
     
</resources>
