<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".SegundaActivity" >

   <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

      
      <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/name2" />

        <EditText
            android:id="@+id/editText9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/editText9">

            <requestFocus />
        </EditText>

    </LinearLayout>
    <Space
        android:layout_width="match_parent"
        android:layout_height="10dip" />
    

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        
             <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/surname2" />

        <EditText
            android:id="@+id/editText10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/editText10" >
            
            
            <requestFocus />
        </EditText>
    </LinearLayout>
     <Space
        android:layout_width="match_parent"
        android:layout_height="10dip" />
            
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
           <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/Fecha_de_nacimiento2" />

        <EditText
            android:id="@+id/editText11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/editText11" >
            
            
            <requestFocus />
        </EditText>
    </LinearLayout>

       <Space
        android:layout_width="match_parent"
        android:layout_height="10dip" />
            
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:orientation="horizontal">
           <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/user2" />

        <EditText
            android:id="@+id/editText12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/editText12"
             /> 
            
            
            <requestFocus />
        
    </LinearLayout>
    
    <Space
        android:layout_width="match_parent"
        android:layout_height="10dip" />
            
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
           <TextView
            android:id="@+id/emailField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/email2" />

        <EditText
            android:id="@+id/editText13"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/editText13" 
            android:inputType="textEmailAddress"
            android:textAppearance="?android:attr/textAppearanceMedium" >
            
            
            <requestFocus />
        </EditText>
    </LinearLayout>
    <Space
        android:layout_width="match_parent"
        android:layout_height="10dip" />
            
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
           <TextView
            android:id="@+id/textView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/password" />

        <EditText
            android:id="@+id/ediText14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/editText14" 
             android:inputType="textPassword" >
            
            
            <requestFocus />
        </EditText>
    </LinearLayout>
     <Space
        android:layout_width="match_parent"
        android:layout_height="10dip" />
     <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom|center"
        android:orientation="vertical" >

        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="?android:attr/buttonBarButtonStyle"
          android:background="#01DF74"
         android:onClick="OnClickRegistro"
         android:text="@string/Button1" />
    </LinearLayout>
    
    

</LinearLayout>
