<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <EditText
        android:id="@+id/editText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
         android:layout_marginTop="28dp"
        android:ems="10" 
        android:hint="@string/editText1"/>
    
     <Space
        android:layout_width="match_parent"
        android:layout_height="10dip" />

     <EditText
         android:id="@+id/editText2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:ems="10"
         android:hint="@string/editText2"
         android:inputType="textPersonName" >

         <requestFocus />
     </EditText>
     
     <Space
        android:layout_width="match_parent"
        android:layout_height="10dip" />

     <EditText
         android:id="@+id/editText3"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:ems="10"
           android:hint="@string/editText3"
         android:inputType="textPersonName" />
     
     <Space
        android:layout_width="match_parent"
        android:layout_height="10dip" />

     <EditText
         android:id="@+id/editText4"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:ems="10"
          android:hint="@string/editText4"
         android:inputType="textPersonName" />
     
     <Space
        android:layout_width="match_parent"
        android:layout_height="10dip" />

     <EditText
         android:id="@+id/emailField"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:ems="10"
         android:inputType="textEmailAddress" 
         android:hint="@string/editText5"/>
     
      <Space
        android:layout_width="match_parent"
        android:layout_height="10dip" />

      <EditText
          android:id="@+id/editText5"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:ems="10"
           android:hint="@string/editText6"
          android:inputType="textPassword" />
      
         <Space
        android:layout_width="match_parent"
        android:layout_height="10dip" />
         
           <Button
               android:id="@+id/button1"
               android:layout_width="fill_parent"
               android:layout_height="wrap_content"
               android:layout_gravity="center"
               android:layout_marginTop="20dp"
               android:onClick="Setting"
               android:text="@string/Button1" />
    
</LinearLayout>
