<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".PrimeraActivity" >

     <Space
        android:layout_width="match_parent"
        android:layout_height="10dip" />
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

      
      <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/User1" />

        <EditText
            android:id="@+id/editText7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email1"
            android:inputType="textEmailAddress"
            android:textAppearance="?android:attr/textAppearanceMedium">

            <requestFocus />
        </EditText>

    </LinearLayout>
    <Space
        android:layout_width="match_parent"
        android:layout_height="10dip" />
    

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        
             <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/password1" />

        <EditText
            android:id="@+id/ediText8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/editText8"
            android:inputType="textPassword" >
            
            
            <requestFocus />
        </EditText>
    </LinearLayout>
     <Space
        android:layout_width="match_parent"
        android:layout_height="10dip" />
            
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom|center"
        android:orientation="vertical" >

        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="?android:attr/buttonBarButtonStyle"
          android:background="#01DF74"
         android:onClick="OnClickLogin"
         android:text="@string/Button" />
    </LinearLayout>

</LinearLayout>